# medical-appointment

./: README.md  db.sqlite3  pyproject.toml  sample.json  test.py
common/: models.py
config/: settings.py  urls.py
departments/: admin.py  models.py  serializers.py  urls.py  views.py
departments/migrations/: 0001_initial.py
doctors/: admin.py  models.py  serializers.py  urls.py  views.py
doctors/migrations/: 0001_initial.py  0002_alter_doctor_non_reimbursement_subjects.py  0003_alter_doctor_non_reimbursement_subjects.py  0004_operatinghour.py  0005_alter_operatinghour_options_and_more.py  0006_rename_doctor_id_operatinghour_doctor.py
non_reimbursement_subjects/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
non_reimbursement_subjects/migrations/: 0001_initial.py
operating_hours/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
operating_hours/migrations/: 0001_initial.py  0002_alter_operatinghour_lunch_end_and_more.py  0003_alter_operatinghour_lunch_end_and_more.py
patients/: admin.py  models.py  serializers.py  urls.py  views.py
patients/migrations/: 0001_initial.py
treatment_request/: apps.py
treatment_requests/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
treatment_requests/migrations/: 0001_initial.py  0002_alter_treatmentrequest_expired_hours.py
